package com.company.weapons;

public class Epee extends Weapon {
    public Epee() {
        super("Epée", 5);
    }
}
