package com.company.weapons;

public class Massue extends Weapon {

    public Massue() {
        super("Massue", 3);
    }
}
