@startuml

title __WEAPONS's Class Diagram__\n

  namespace  {
    namespace om.company {
      namespace weapons {
        class com.company.weapons.Epee {
            + Epee()
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace weapons {
        class com.company.weapons.Massue {
            + Massue()
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace weapons {
        abstract class com.company.weapons.Weapon {
            # weaponStrength : int
            + Weapon()
            + Weapon()
            + addWeaponStrength()
            + getWeaponStrength()
            + interact()
        }
      }
    }
  }
  

  com.company.weapons.Epee -up-|> com.company.weapons.Weapon
  com.company.weapons.Massue -up-|> com.company.weapons.Weapon
  com.company.weapons.Weapon -up-|> com.company.Case


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
